# GWPM

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
reports/: README.md  current_gee_feature_dictionary.md  feature_extraction_research_plan.md  gee_feature_extraction_pipeline.md  gee_groundwater_dataset_plan.md  groundwater_poc_presentation_report.md  sdr_data_profile.md  sdr_modeling_readiness_report.md  texas_sdr_modeling_report.md  yield20_classification_dataset.md  yield20_spatial_generalization_5000.json  yield20_xgboost_5000_feature_importance_builtin.csv  yield20_xgboost_5000_feature_importance_permutation.csv  yield20_xgboost_5000_metrics.json
scripts/: README.md  build_project_presentation.py  create_yield20_classification_dataset.py  evaluate_spatial_generalization.py  explore_sdr.py  extract_gee_features_smoke.py  merge_feature_batches.py  modeling_readiness_eda.py  plot_feature_importance.py  train_xgboost_yield20.py
src/gpm/: README.md  __init__.py  batch_merge.py  gee_auth.py  gee_features.py  modeling.py  paths.py  progress.py
