[project]
name = "gpm"
version = "0.1.0"
description = "Groundwater proof-of-concept modeling using Texas SDR well data as an analogue for Kazakhstan heatmap inference."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "earthengine-api>=1.5.0",
    "geopandas>=1.1.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "openpyxl>=3.1.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "python-pptx>=1.0.2",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "rasterio>=1.4.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.0",
    "shapely>=2.1.0",
    "tabulate>=0.9.0",
    "tzdata>=2025.2",
    "xgboost>=3.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
